@@ -93,6 +93,10 @@ Working version
   invariant checks are enabled.
   (Vincent Laviron, review by Gabriel Scherer)
 
+- #10981: Implement a -cmi-file option for ocamlc and ocamlopt.
+  (Sébastien Hinderer, review by Damien Doligez, Daniel Bünzli and
+  Florian   Angeletti)
+
 ### Internal/compiler-libs changes:
 
 - #10878, #10909: restore flambda after the Multicore merge.
